# config-guard

./: Cargo.toml  deploy.sh  run-tests.sh
config/: config-guard-etc.service  config-guard.service  etc.toml  osso.toml
docs/specs/: config-guard.md
src/: fanotify.rs  learning.rs  lib.rs  main.rs  policy.rs  process.rs  prompt.rs  reconcile.rs
src/fanotify/: tests.rs
tests/: config_file.rs  learning.rs  policy.rs  process_identity.rs  reconcile.rs  root_integration.rs
