[package]
name = "config-guard"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0"
authd-protocol = { path = "../authd/protocol" }
clap = { version = "4.5", features = ["derive"] }
libc = "0.2"
peercred-ipc = { git = "https://github.com/Osso/peercred-ipc", rev = "7ee9ae26aed0313cd793ddfc51e0996cf15038e9" }
rmp-serde = "1.3"
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(coverage)'] }
